--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    margin: 0;
+    flex-wrap: wrap;
+}
+
+div {
+    cursor: default;
+}
